--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,10 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2022",
-    "module": "es2020",
+    "target": "ES2017",
+    "module": "ES2020",
     "lib": [
-      "es2018", 
+      "ES2020", 
       "dom"
     ],
     "useDefineForClassFields": false
